# boston_population_analysis

./: Makefile  README.md  pyproject.toml
boston_population_analysis/: __init__.py  dataset.py  features.py
boston_population_analysis/modeling/: train.py
docs/: reflection.txt  todo.txt
notebooks/: simple_analysis.py
plant_sales_project/: __init__.py  dataset.py  plots.py
plant_sales_project/modeling/: predict.py
