[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "plant_sales_project"
version = "0.0.1"
description = "Project on plant sales from Kaggle."
authors = [
  { name = "Aleksandra Moskal" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["plant_sales_project"]
include = ["pyproject.toml", "plant_sales_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["plant_sales_project"]
force-sort-within-sections = true

